k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-demo
  template:
    metadata:
      labels:
        app: java-demo
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: java-demo
          image: docker.io/f1sh666/java-demo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
