k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: java-demo.com  # 你想使用的域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-demo-service # 必须匹配你之前创建的 Service 名字
            port:
              number: 80 # 匹配 Service 暴露的端口
